# yolo_test

./: README.md
yolo_master/: CMakeLists.txt  package.xml
yolo_master/include/yolo_master/: yolo_master.hpp
yolo_master/src/: yolo_master.cpp
yolo_master/yolo/: yolov7_tiny_cup.cfg  yolov7_tiny_pin.cfg
yolo_ui/: CMakeLists.txt  package.xml
yolo_ui/include/yolo_ui/: main_window.hpp  qnode.hpp
yolo_ui/src/: main.cpp  main_window.cpp  qnode.cpp
yolo_ui/ui/: main_window.ui
